<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/TEXTO"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_activar_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_resultado" />

    <Button
        android:id="@+id/btn_apagar_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apagar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_resultado" />

    <ListView
        android:id="@+id/listDevices"
        android:layout_width="385dp"
        android:layout_height="595dp"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_resultado"
        app:layout_constraintVertical_bias="0.888" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="91dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/listDevices"
        app:layout_constraintEnd_toStartOf="@+id/btn_apagar_b"
        app:layout_constraintStart_toEndOf="@+id/btn_activar_b"
        app:layout_constraintTop_toBottomOf="@+id/text_resultado"
        app:srcCompat="@drawable/ic_bluetooth_audio" />
</androidx.constraintlayout.widget.ConstraintLayout>